--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
-title: "blog title"
-author: "Blog Author"
-description: "Really cool blog about ... something"
+title: "Stuff 'n Things"
+author: "Daniel Neighman"
+description: "Tech and Stuff"
 #subheading: "Really cool blog about ... something"
 more: "read more"
-url: "http://niklabs.me"
-baseurl: "/contrast" # comment out if in root directory
+url: "http://hassox.github.io"
+# baseurl: "/contrast" # comment out if in root directory
 
 comments:
-    disqus: "niklasbuschmann"
+    disqus: "hassox"
 #    isso: "comments.mysite.org"
 
 style:
-#    body: "whitesmoke"
+  # body: "whitesmoke"
     padding: 33%
     anchor: "#46f"
     serif-heading: true
@@ -23,12 +23,12 @@ style:
         even: "#222222"
 
 links:
-  - github: "https://github.com/me/"
-  - twitter: "https://twitter.com/me/"
-  - google-plus: "https://plus.google.com/+me"
-  - reddit: "https://www.reddit.com/user/me/"
-  - youtube: "https://www.youtube.com/user/me"
-  - steam: "http://steamcommunity.com/id/me/"
+  - github: "https://github.com/hassox/"
+  - twitter: "https://twitter.com/hassox/"
+  # - google-plus: "https://plus.google.com/+me"
+  # - reddit: "https://www.reddit.com/user/me/"
+  # - youtube: "https://www.youtube.com/user/me"
+  # - steam: "http://steamcommunity.com/id/me/"
 
 excerpt_separator: "\n\n\n"
 defaults: [{scope: {path: ""}, values: {layout: "default"}}, {scope: {path: "", type: "posts"}, values: {comments: true}}]
